[gd_scene load_steps=6 format=3 uid="uid://cgameroot"]

[ext_resource type="Script" path="res://scripts/ui/game_root.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://cmain" path="res://scenes/main.tscn" id="2_main"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.17, 0.17, 0.27, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.35, 0.45, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inner"]
bg_color = Color(0.12, 0.12, 0.18, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wave_btn"]
bg_color = Color(0.8, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.4, 0.4, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="ButtonGroup" id="ButtonGroup_balls"]

[node name="GameRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="LeftPanel" type="PanelContainer" parent="MainLayout"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="MainLayout/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackBtn" type="Button" parent="MainLayout/LeftPanel/VBox"]
layout_mode = 2
text = "< Menu"

[node name="StatsPanel" type="PanelContainer" parent="MainLayout/LeftPanel/VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inner")

[node name="Stats" type="VBoxContainer" parent="MainLayout/LeftPanel/VBox/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="StatsTitle" type="Label" parent="MainLayout/LeftPanel/VBox/StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "STATS"
horizontal_alignment = 1

[node name="LivesLabel" type="Label" parent="MainLayout/LeftPanel/VBox/StatsPanel/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "â™¥ 20"

[node name="TowerSection" type="VBoxContainer" parent="MainLayout/LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyTitle" type="Label" parent="MainLayout/LeftPanel/VBox/TowerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "PARTY"
horizontal_alignment = 1

[node name="PartyPanel" type="VBoxContainer" parent="MainLayout/LeftPanel/VBox/TowerSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyScroll" type="ScrollContainer" parent="MainLayout/LeftPanel/VBox/TowerSection/PartyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyGrid" type="GridContainer" parent="MainLayout/LeftPanel/VBox/TowerSection/PartyPanel/PartyScroll"]
layout_mode = 2
size_flags_horizontal = 3
columns = 1
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="EmptyLabel" type="Label" parent="MainLayout/LeftPanel/VBox/TowerSection/PartyPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "No party selected"
horizontal_alignment = 1

[node name="GameViewport" type="SubViewportContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="MainLayout/GameViewport"]
handle_input_locally = true
size = Vector2i(880, 720)
render_target_update_mode = 4

[node name="World" parent="MainLayout/GameViewport/SubViewport" instance=ExtResource("2_main")]

[node name="RightPanel" type="PanelContainer" parent="MainLayout"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LocationLabel" type="Label" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "Viridian Forest"
horizontal_alignment = 1

[node name="WavePanel" type="PanelContainer" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inner")

[node name="WaveLabel" type="Label" parent="MainLayout/RightPanel/VBox/WavePanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wave 0 / 10"
horizontal_alignment = 1

[node name="StartWaveBtn" type="Button" parent="MainLayout/RightPanel/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_wave_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_wave_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wave_btn")
text = "START WAVE"

[node name="BallSettingsPanel" type="PanelContainer" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inner")

[node name="VBox" type="VBoxContainer" parent="MainLayout/RightPanel/VBox/BallSettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BallTitle" type="Label" parent="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "CATCH BALL"
horizontal_alignment = 1

[node name="BallButtons" type="VBoxContainer" parent="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PokeballBtn" type="Button" parent="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox/BallButtons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_balls")
text = "Pokeball Z50 (1.0x)"

[node name="GreatballBtn" type="Button" parent="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox/BallButtons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_balls")
text = "Great Ball Z100 (1.5x)"

[node name="UltraballBtn" type="Button" parent="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox/BallButtons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_balls")
text = "Ultra Ball Z200 (2.0x)"

[node name="Spacer" type="Control" parent="MainLayout/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemyInfoPanel" type="PanelContainer" parent="MainLayout/RightPanel/VBox"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inner")

[node name="VBox" type="VBoxContainer" parent="MainLayout/RightPanel/VBox/EnemyInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="EnemyTitle" type="Label" parent="MainLayout/RightPanel/VBox/EnemyInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "SELECTED ENEMY"
horizontal_alignment = 1

[node name="EnemyName" type="Label" parent="MainLayout/RightPanel/VBox/EnemyInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rattata"
horizontal_alignment = 1

[node name="EnemyHealth" type="Label" parent="MainLayout/RightPanel/VBox/EnemyInfoPanel/VBox"]
layout_mode = 2
text = "HP: 50 / 50"
horizontal_alignment = 1

[connection signal="pressed" from="MainLayout/LeftPanel/VBox/BackBtn" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainLayout/RightPanel/VBox/StartWaveBtn" to="." method="_on_start_wave_pressed"]
[connection signal="pressed" from="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox/BallButtons/PokeballBtn" to="." method="_on_ball_selected" binds= ["pokeball"]]
[connection signal="pressed" from="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox/BallButtons/GreatballBtn" to="." method="_on_ball_selected" binds= ["greatball"]]
[connection signal="pressed" from="MainLayout/RightPanel/VBox/BallSettingsPanel/VBox/BallButtons/UltraballBtn" to="." method="_on_ball_selected" binds= ["ultraball"]]
